parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> var_declaration
Rule 5     statement -> assignment
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> for_statement
Rule 9     statement -> print_statement
Rule 10    statement -> model_declaration
Rule 11    statement -> model_operation
Rule 12    statement -> model_operation_with_params
Rule 13    statement -> model_assign_r
Rule 14    statement -> function_declaration
Rule 15    statement -> return_statement
Rule 16    statement -> continue_statement
Rule 17    statement -> break_statement
Rule 18    statement -> variable_query
Rule 19    statement -> comment_expression
Rule 20    var_declaration -> VAR IDENTIFIER EQ numvar_expression SEMICOLON
Rule 21    var_declaration -> VAR IDENTIFIER EQ bool_expression SEMICOLON
Rule 22    var_declaration -> VAR IDENTIFIER EQ string_expression SEMICOLON
Rule 23    var_declaration -> VAR IDENTIFIER EQ identifier_expression SEMICOLON
Rule 24    var_declaration -> VAR IDENTIFIER EQ array SEMICOLON
Rule 25    var_declaration -> VAR IDENTIFIER EQ matrix SEMICOLON
Rule 26    var_declaration -> VAR IDENTIFIER EQ matrixs SEMICOLON
Rule 27    assignment -> IDENTIFIER EQ numvar_expression SEMICOLON
Rule 28    assignment -> IDENTIFIER EQ bool_expression SEMICOLON
Rule 29    assignment -> IDENTIFIER EQ string_expression SEMICOLON
Rule 30    assignment -> IDENTIFIER EQ identifier_expression SEMICOLON
Rule 31    assignment -> IDENTIFIER EQ array SEMICOLON
Rule 32    assignment -> IDENTIFIER EQ matrix SEMICOLON
Rule 33    variable_query -> IDENTIFIER SEMICOLON
Rule 34    if_statement -> IF LPAREN condition RPAREN LBRACE statement_list RBRACE elif_clause else_clause
Rule 35    elif_clause -> ELIF LPAREN condition RPAREN LBRACE statement_list RBRACE elif_clause
Rule 36    elif_clause -> empty
Rule 37    else_clause -> ELSE LBRACE statement_list RBRACE
Rule 38    else_clause -> empty
Rule 39    while_statement -> WHILE LPAREN condition RPAREN LBRACE statement_list RBRACE
Rule 40    for_statement -> FOR LPAREN for_initialization condition SEMICOLON for_update RPAREN LBRACE statement_list RBRACE
Rule 41    for_initialization -> var_declaration
Rule 42    for_update -> IDENTIFIER EQ numvar_expression
Rule 43    for_update -> empty
Rule 44    print_statement -> PRINT LPAREN print_arguments RPAREN SEMICOLON
Rule 45    print_arguments -> print_arguments COMMA print_argument
Rule 46    print_arguments -> print_argument
Rule 47    print_argument -> numvar_expression
Rule 48    print_argument -> bool_expression
Rule 49    print_argument -> string_expression
Rule 50    print_argument -> identifier_expression
Rule 51    model_declaration -> MODEL IDENTIFIER EQ LPAREN NUMBER COMMA array COMMA array COMMA matrixs RPAREN SEMICOLON
Rule 52    model_operation -> IDENTIFIER DOT IDENTIFIER LPAREN RPAREN SEMICOLON
Rule 53    model_operation_with_params -> IDENTIFIER DOT IDENTIFIER LPAREN param_list RPAREN SEMICOLON
Rule 54    param_list -> param_list COMMA param
Rule 55    param_list -> param
Rule 56    param_list -> empty
Rule 57    param -> numvar_expression
Rule 58    param -> bool_expression
Rule 59    param -> string_expression
Rule 60    param -> identifier_expression
Rule 61    model_assign_r -> IDENTIFIER DOT IDENTIFIER EQ array SEMICOLON
Rule 62    model_assign_r -> IDENTIFIER DOT IDENTIFIER EQ matrix SEMICOLON
Rule 63    function_declaration -> FUN IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
Rule 64    parameter_list -> parameter_list COMMA IDENTIFIER
Rule 65    parameter_list -> IDENTIFIER
Rule 66    parameter_list -> empty
Rule 67    return_statement -> RETURN numvar_expression SEMICOLON
Rule 68    return_statement -> RETURN bool_expression SEMICOLON
Rule 69    return_statement -> RETURN string_expression SEMICOLON
Rule 70    return_statement -> RETURN identifier_expression SEMICOLON
Rule 71    continue_statement -> CONTINUE SEMICOLON
Rule 72    break_statement -> BREAK SEMICOLON
Rule 73    numvar_expression -> numvar_expression PLUS numvar_expression
Rule 74    numvar_expression -> numvar_expression MINUS numvar_expression
Rule 75    numvar_expression -> numvar_expression MUL numvar_expression
Rule 76    numvar_expression -> numvar_expression DIV numvar_expression
Rule 77    numvar_expression -> numvar_expression POW numvar_expression
Rule 78    numvar_expression -> numvar
Rule 79    numvar -> NUMBER
Rule 80    numvar -> IDENTIFIER
Rule 81    bool_expression -> bool_expression AND bool_expression
Rule 82    bool_expression -> bool_expression OR bool_expression
Rule 83    bool_expression -> NOT bool_expression
Rule 84    bool_expression -> BOOL
Rule 85    comparison_expression -> numvar_expression EQ numvar_expression
Rule 86    comparison_expression -> numvar_expression NE numvar_expression
Rule 87    comparison_expression -> numvar_expression EE numvar_expression
Rule 88    comparison_expression -> numvar_expression LT numvar_expression
Rule 89    comparison_expression -> numvar_expression LTE numvar_expression
Rule 90    comparison_expression -> numvar_expression GT numvar_expression
Rule 91    comparison_expression -> numvar_expression GTE numvar_expression
Rule 92    comparison_expression -> bool_expression EQ bool_expression
Rule 93    comparison_expression -> bool_expression NE bool_expression
Rule 94    comparison_expression -> bool_expression EE bool_expression
Rule 95    string_expression -> STRING
Rule 96    identifier_expression -> IDENTIFIER
Rule 97    condition -> comparison_expression
Rule 98    condition -> bool_expression
Rule 99    array -> LBRACKET elements RBRACKET
Rule 100   elements -> elements COMMA numvar_expression
Rule 101   elements -> numvar_expression
Rule 102   elements -> empty
Rule 103   matrixs -> LBRACKET matrixs COMMA matrix RBRACKET
Rule 104   matrixs -> matrix
Rule 105   matrixs -> empty
Rule 106   matrix -> LBRACKET arrays RBRACKET
Rule 107   arrays -> arrays COMMA array
Rule 108   arrays -> array
Rule 109   arrays -> empty
Rule 110   comment_expression -> COMMENT STRING
Rule 111   empty -> <empty>

Terminals, with rules where they appear

AND                  : 81
BOOL                 : 84
BREAK                : 72
COMMA                : 45 51 51 51 54 64 100 103 107
COMMENT              : 110
CONTINUE             : 71
DIV                  : 76
DOT                  : 52 53 61 62
EE                   : 87 94
ELIF                 : 35
ELSE                 : 37
EQ                   : 20 21 22 23 24 25 26 27 28 29 30 31 32 42 51 61 62 85 92
FOR                  : 40
FUN                  : 63
GT                   : 90
GTE                  : 91
IDENTIFIER           : 20 21 22 23 24 25 26 27 28 29 30 31 32 33 42 51 52 52 53 53 61 61 62 62 63 64 65 80 96
IF                   : 34
LBRACE               : 34 35 37 39 40 63
LBRACKET             : 99 103 106
LPAREN               : 34 35 39 40 44 51 52 53 63
LT                   : 88
LTE                  : 89
MINUS                : 74
MODEL                : 51
MUL                  : 75
NE                   : 86 93
NOT                  : 83
NUMBER               : 51 79
OR                   : 82
PLUS                 : 73
POW                  : 77
PRINT                : 44
RBRACE               : 34 35 37 39 40 63
RBRACKET             : 99 103 106
RETURN               : 67 68 69 70
RPAREN               : 34 35 39 40 44 51 52 53 63
SEMICOLON            : 20 21 22 23 24 25 26 27 28 29 30 31 32 33 40 44 51 52 53 61 62 67 68 69 70 71 72
STRING               : 95 110
VAR                  : 20 21 22 23 24 25 26
WHILE                : 39
error                : 

Nonterminals, with rules where they appear

array                : 24 31 51 51 61 107 108
arrays               : 106 107
assignment           : 5
bool_expression      : 21 28 48 58 68 81 81 82 82 83 92 92 93 93 94 94 98
break_statement      : 17
comment_expression   : 19
comparison_expression : 97
condition            : 34 35 39 40
continue_statement   : 16
elements             : 99 100
elif_clause          : 34 35
else_clause          : 34
empty                : 36 38 43 56 66 102 105 109
for_initialization   : 40
for_statement        : 8
for_update           : 40
function_declaration : 14
identifier_expression : 23 30 50 60 70
if_statement         : 6
matrix               : 25 32 62 103 104
matrixs              : 26 51 103
model_assign_r       : 13
model_declaration    : 10
model_operation      : 11
model_operation_with_params : 12
numvar               : 78
numvar_expression    : 20 27 42 47 57 67 73 73 74 74 75 75 76 76 77 77 85 85 86 86 87 87 88 88 89 89 90 90 91 91 100 101
param                : 54 55
param_list           : 53 54
parameter_list       : 63 64
print_argument       : 45 46
print_arguments      : 44 45
print_statement      : 9
program              : 0
return_statement     : 15
statement            : 2 3
statement_list       : 1 2 34 35 37 39 40 63
string_expression    : 22 29 49 59 69
var_declaration      : 4 41
variable_query       : 18
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . var_declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . print_statement
    (10) statement -> . model_declaration
    (11) statement -> . model_operation
    (12) statement -> . model_operation_with_params
    (13) statement -> . model_assign_r
    (14) statement -> . function_declaration
    (15) statement -> . return_statement
    (16) statement -> . continue_statement
    (17) statement -> . break_statement
    (18) statement -> . variable_query
    (19) statement -> . comment_expression
    (20) var_declaration -> . VAR IDENTIFIER EQ numvar_expression SEMICOLON
    (21) var_declaration -> . VAR IDENTIFIER EQ bool_expression SEMICOLON
    (22) var_declaration -> . VAR IDENTIFIER EQ string_expression SEMICOLON
    (23) var_declaration -> . VAR IDENTIFIER EQ identifier_expression SEMICOLON
    (24) var_declaration -> . VAR IDENTIFIER EQ array SEMICOLON
    (25) var_declaration -> . VAR IDENTIFIER EQ matrix SEMICOLON
    (26) var_declaration -> . VAR IDENTIFIER EQ matrixs SEMICOLON
    (27) assignment -> . IDENTIFIER EQ numvar_expression SEMICOLON
    (28) assignment -> . IDENTIFIER EQ bool_expression SEMICOLON
    (29) assignment -> . IDENTIFIER EQ string_expression SEMICOLON
    (30) assignment -> . IDENTIFIER EQ identifier_expression SEMICOLON
    (31) assignment -> . IDENTIFIER EQ array SEMICOLON
    (32) assignment -> . IDENTIFIER EQ matrix SEMICOLON
    (34) if_statement -> . IF LPAREN condition RPAREN LBRACE statement_list RBRACE elif_clause else_clause
    (39) while_statement -> . WHILE LPAREN condition RPAREN LBRACE statement_list RBRACE
    (40) for_statement -> . FOR LPAREN for_initialization condition SEMICOLON for_update RPAREN LBRACE statement_list RBRACE
    (44) print_statement -> . PRINT LPAREN print_arguments RPAREN SEMICOLON
    (51) model_declaration -> . MODEL IDENTIFIER EQ LPAREN NUMBER COMMA array COMMA array COMMA matrixs RPAREN SEMICOLON
    (52) model_operation -> . IDENTIFIER DOT IDENTIFIER LPAREN RPAREN SEMICOLON
    (53) model_operation_with_params -> . IDENTIFIER DOT IDENTIFIER LPAREN param_list RPAREN SEMICOLON
    (61) model_assign_r -> . IDENTIFIER DOT IDENTIFIER EQ array SEMICOLON
    (62) model_assign_r -> . IDENTIFIER DOT IDENTIFIER EQ matrix SEMICOLON
    (63) function_declaration -> . FUN IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (67) return_statement -> . RETURN numvar_expression SEMICOLON
    (68) return_statement -> . RETURN bool_expression SEMICOLON
    (69) return_statement -> . RETURN string_expression SEMICOLON
    (70) return_statement -> . RETURN identifier_expression SEMICOLON
    (71) continue_statement -> . CONTINUE SEMICOLON
    (72) break_statement -> . BREAK SEMICOLON
    (33) variable_query -> . IDENTIFIER SEMICOLON
    (110) comment_expression -> . COMMENT STRING

    VAR             shift and go to state 20
    IDENTIFIER      shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    PRINT           shift and go to state 25
    MODEL           shift and go to state 26
    FUN             shift and go to state 27
    RETURN          shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    COMMENT         shift and go to state 31

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    var_declaration                shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    print_statement                shift and go to state 9
    model_declaration              shift and go to state 10
    model_operation                shift and go to state 11
    model_operation_with_params    shift and go to state 12
    model_assign_r                 shift and go to state 13
    function_declaration           shift and go to state 14
    return_statement               shift and go to state 15
    continue_statement             shift and go to state 16
    break_statement                shift and go to state 17
    variable_query                 shift and go to state 18
    comment_expression             shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . var_declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . print_statement
    (10) statement -> . model_declaration
    (11) statement -> . model_operation
    (12) statement -> . model_operation_with_params
    (13) statement -> . model_assign_r
    (14) statement -> . function_declaration
    (15) statement -> . return_statement
    (16) statement -> . continue_statement
    (17) statement -> . break_statement
    (18) statement -> . variable_query
    (19) statement -> . comment_expression
    (20) var_declaration -> . VAR IDENTIFIER EQ numvar_expression SEMICOLON
    (21) var_declaration -> . VAR IDENTIFIER EQ bool_expression SEMICOLON
    (22) var_declaration -> . VAR IDENTIFIER EQ string_expression SEMICOLON
    (23) var_declaration -> . VAR IDENTIFIER EQ identifier_expression SEMICOLON
    (24) var_declaration -> . VAR IDENTIFIER EQ array SEMICOLON
    (25) var_declaration -> . VAR IDENTIFIER EQ matrix SEMICOLON
    (26) var_declaration -> . VAR IDENTIFIER EQ matrixs SEMICOLON
    (27) assignment -> . IDENTIFIER EQ numvar_expression SEMICOLON
    (28) assignment -> . IDENTIFIER EQ bool_expression SEMICOLON
    (29) assignment -> . IDENTIFIER EQ string_expression SEMICOLON
    (30) assignment -> . IDENTIFIER EQ identifier_expression SEMICOLON
    (31) assignment -> . IDENTIFIER EQ array SEMICOLON
    (32) assignment -> . IDENTIFIER EQ matrix SEMICOLON
    (34) if_statement -> . IF LPAREN condition RPAREN LBRACE statement_list RBRACE elif_clause else_clause
    (39) while_statement -> . WHILE LPAREN condition RPAREN LBRACE statement_list RBRACE
    (40) for_statement -> . FOR LPAREN for_initialization condition SEMICOLON for_update RPAREN LBRACE statement_list RBRACE
    (44) print_statement -> . PRINT LPAREN print_arguments RPAREN SEMICOLON
    (51) model_declaration -> . MODEL IDENTIFIER EQ LPAREN NUMBER COMMA array COMMA array COMMA matrixs RPAREN SEMICOLON
    (52) model_operation -> . IDENTIFIER DOT IDENTIFIER LPAREN RPAREN SEMICOLON
    (53) model_operation_with_params -> . IDENTIFIER DOT IDENTIFIER LPAREN param_list RPAREN SEMICOLON
    (61) model_assign_r -> . IDENTIFIER DOT IDENTIFIER EQ array SEMICOLON
    (62) model_assign_r -> . IDENTIFIER DOT IDENTIFIER EQ matrix SEMICOLON
    (63) function_declaration -> . FUN IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (67) return_statement -> . RETURN numvar_expression SEMICOLON
    (68) return_statement -> . RETURN bool_expression SEMICOLON
    (69) return_statement -> . RETURN string_expression SEMICOLON
    (70) return_statement -> . RETURN identifier_expression SEMICOLON
    (71) continue_statement -> . CONTINUE SEMICOLON
    (72) break_statement -> . BREAK SEMICOLON
    (33) variable_query -> . IDENTIFIER SEMICOLON
    (110) comment_expression -> . COMMENT STRING

    $end            reduce using rule 1 (program -> statement_list .)
    VAR             shift and go to state 20
    IDENTIFIER      shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    PRINT           shift and go to state 25
    MODEL           shift and go to state 26
    FUN             shift and go to state 27
    RETURN          shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    COMMENT         shift and go to state 31

    statement                      shift and go to state 32
    var_declaration                shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    print_statement                shift and go to state 9
    model_declaration              shift and go to state 10
    model_operation                shift and go to state 11
    model_operation_with_params    shift and go to state 12
    model_assign_r                 shift and go to state 13
    function_declaration           shift and go to state 14
    return_statement               shift and go to state 15
    continue_statement             shift and go to state 16
    break_statement                shift and go to state 17
    variable_query                 shift and go to state 18
    comment_expression             shift and go to state 19

state 3

    (3) statement_list -> statement .

    VAR             reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    MODEL           reduce using rule 3 (statement_list -> statement .)
    FUN             reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    CONTINUE        reduce using rule 3 (statement_list -> statement .)
    BREAK           reduce using rule 3 (statement_list -> statement .)
    COMMENT         reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> var_declaration .

    VAR             reduce using rule 4 (statement -> var_declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> var_declaration .)
    IF              reduce using rule 4 (statement -> var_declaration .)
    WHILE           reduce using rule 4 (statement -> var_declaration .)
    FOR             reduce using rule 4 (statement -> var_declaration .)
    PRINT           reduce using rule 4 (statement -> var_declaration .)
    MODEL           reduce using rule 4 (statement -> var_declaration .)
    FUN             reduce using rule 4 (statement -> var_declaration .)
    RETURN          reduce using rule 4 (statement -> var_declaration .)
    CONTINUE        reduce using rule 4 (statement -> var_declaration .)
    BREAK           reduce using rule 4 (statement -> var_declaration .)
    COMMENT         reduce using rule 4 (statement -> var_declaration .)
    $end            reduce using rule 4 (statement -> var_declaration .)
    RBRACE          reduce using rule 4 (statement -> var_declaration .)


state 5

    (5) statement -> assignment .

    VAR             reduce using rule 5 (statement -> assignment .)
    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    PRINT           reduce using rule 5 (statement -> assignment .)
    MODEL           reduce using rule 5 (statement -> assignment .)
    FUN             reduce using rule 5 (statement -> assignment .)
    RETURN          reduce using rule 5 (statement -> assignment .)
    CONTINUE        reduce using rule 5 (statement -> assignment .)
    BREAK           reduce using rule 5 (statement -> assignment .)
    COMMENT         reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> if_statement .

    VAR             reduce using rule 6 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    PRINT           reduce using rule 6 (statement -> if_statement .)
    MODEL           reduce using rule 6 (statement -> if_statement .)
    FUN             reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    CONTINUE        reduce using rule 6 (statement -> if_statement .)
    BREAK           reduce using rule 6 (statement -> if_statement .)
    COMMENT         reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    VAR             reduce using rule 7 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    FOR             reduce using rule 7 (statement -> while_statement .)
    PRINT           reduce using rule 7 (statement -> while_statement .)
    MODEL           reduce using rule 7 (statement -> while_statement .)
    FUN             reduce using rule 7 (statement -> while_statement .)
    RETURN          reduce using rule 7 (statement -> while_statement .)
    CONTINUE        reduce using rule 7 (statement -> while_statement .)
    BREAK           reduce using rule 7 (statement -> while_statement .)
    COMMENT         reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> for_statement .

    VAR             reduce using rule 8 (statement -> for_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> for_statement .)
    IF              reduce using rule 8 (statement -> for_statement .)
    WHILE           reduce using rule 8 (statement -> for_statement .)
    FOR             reduce using rule 8 (statement -> for_statement .)
    PRINT           reduce using rule 8 (statement -> for_statement .)
    MODEL           reduce using rule 8 (statement -> for_statement .)
    FUN             reduce using rule 8 (statement -> for_statement .)
    RETURN          reduce using rule 8 (statement -> for_statement .)
    CONTINUE        reduce using rule 8 (statement -> for_statement .)
    BREAK           reduce using rule 8 (statement -> for_statement .)
    COMMENT         reduce using rule 8 (statement -> for_statement .)
    $end            reduce using rule 8 (statement -> for_statement .)
    RBRACE          reduce using rule 8 (statement -> for_statement .)


state 9

    (9) statement -> print_statement .

    VAR             reduce using rule 9 (statement -> print_statement .)
    IDENTIFIER      reduce using rule 9 (statement -> print_statement .)
    IF              reduce using rule 9 (statement -> print_statement .)
    WHILE           reduce using rule 9 (statement -> print_statement .)
    FOR             reduce using rule 9 (statement -> print_statement .)
    PRINT           reduce using rule 9 (statement -> print_statement .)
    MODEL           reduce using rule 9 (statement -> print_statement .)
    FUN             reduce using rule 9 (statement -> print_statement .)
    RETURN          reduce using rule 9 (statement -> print_statement .)
    CONTINUE        reduce using rule 9 (statement -> print_statement .)
    BREAK           reduce using rule 9 (statement -> print_statement .)
    COMMENT         reduce using rule 9 (statement -> print_statement .)
    $end            reduce using rule 9 (statement -> print_statement .)
    RBRACE          reduce using rule 9 (statement -> print_statement .)


state 10

    (10) statement -> model_declaration .

    VAR             reduce using rule 10 (statement -> model_declaration .)
    IDENTIFIER      reduce using rule 10 (statement -> model_declaration .)
    IF              reduce using rule 10 (statement -> model_declaration .)
    WHILE           reduce using rule 10 (statement -> model_declaration .)
    FOR             reduce using rule 10 (statement -> model_declaration .)
    PRINT           reduce using rule 10 (statement -> model_declaration .)
    MODEL           reduce using rule 10 (statement -> model_declaration .)
    FUN             reduce using rule 10 (statement -> model_declaration .)
    RETURN          reduce using rule 10 (statement -> model_declaration .)
    CONTINUE        reduce using rule 10 (statement -> model_declaration .)
    BREAK           reduce using rule 10 (statement -> model_declaration .)
    COMMENT         reduce using rule 10 (statement -> model_declaration .)
    $end            reduce using rule 10 (statement -> model_declaration .)
    RBRACE          reduce using rule 10 (statement -> model_declaration .)


state 11

    (11) statement -> model_operation .

    VAR             reduce using rule 11 (statement -> model_operation .)
    IDENTIFIER      reduce using rule 11 (statement -> model_operation .)
    IF              reduce using rule 11 (statement -> model_operation .)
    WHILE           reduce using rule 11 (statement -> model_operation .)
    FOR             reduce using rule 11 (statement -> model_operation .)
    PRINT           reduce using rule 11 (statement -> model_operation .)
    MODEL           reduce using rule 11 (statement -> model_operation .)
    FUN             reduce using rule 11 (statement -> model_operation .)
    RETURN          reduce using rule 11 (statement -> model_operation .)
    CONTINUE        reduce using rule 11 (statement -> model_operation .)
    BREAK           reduce using rule 11 (statement -> model_operation .)
    COMMENT         reduce using rule 11 (statement -> model_operation .)
    $end            reduce using rule 11 (statement -> model_operation .)
    RBRACE          reduce using rule 11 (statement -> model_operation .)


state 12

    (12) statement -> model_operation_with_params .

    VAR             reduce using rule 12 (statement -> model_operation_with_params .)
    IDENTIFIER      reduce using rule 12 (statement -> model_operation_with_params .)
    IF              reduce using rule 12 (statement -> model_operation_with_params .)
    WHILE           reduce using rule 12 (statement -> model_operation_with_params .)
    FOR             reduce using rule 12 (statement -> model_operation_with_params .)
    PRINT           reduce using rule 12 (statement -> model_operation_with_params .)
    MODEL           reduce using rule 12 (statement -> model_operation_with_params .)
    FUN             reduce using rule 12 (statement -> model_operation_with_params .)
    RETURN          reduce using rule 12 (statement -> model_operation_with_params .)
    CONTINUE        reduce using rule 12 (statement -> model_operation_with_params .)
    BREAK           reduce using rule 12 (statement -> model_operation_with_params .)
    COMMENT         reduce using rule 12 (statement -> model_operation_with_params .)
    $end            reduce using rule 12 (statement -> model_operation_with_params .)
    RBRACE          reduce using rule 12 (statement -> model_operation_with_params .)


state 13

    (13) statement -> model_assign_r .

    VAR             reduce using rule 13 (statement -> model_assign_r .)
    IDENTIFIER      reduce using rule 13 (statement -> model_assign_r .)
    IF              reduce using rule 13 (statement -> model_assign_r .)
    WHILE           reduce using rule 13 (statement -> model_assign_r .)
    FOR             reduce using rule 13 (statement -> model_assign_r .)
    PRINT           reduce using rule 13 (statement -> model_assign_r .)
    MODEL           reduce using rule 13 (statement -> model_assign_r .)
    FUN             reduce using rule 13 (statement -> model_assign_r .)
    RETURN          reduce using rule 13 (statement -> model_assign_r .)
    CONTINUE        reduce using rule 13 (statement -> model_assign_r .)
    BREAK           reduce using rule 13 (statement -> model_assign_r .)
    COMMENT         reduce using rule 13 (statement -> model_assign_r .)
    $end            reduce using rule 13 (statement -> model_assign_r .)
    RBRACE          reduce using rule 13 (statement -> model_assign_r .)


state 14

    (14) statement -> function_declaration .

    VAR             reduce using rule 14 (statement -> function_declaration .)
    IDENTIFIER      reduce using rule 14 (statement -> function_declaration .)
    IF              reduce using rule 14 (statement -> function_declaration .)
    WHILE           reduce using rule 14 (statement -> function_declaration .)
    FOR             reduce using rule 14 (statement -> function_declaration .)
    PRINT           reduce using rule 14 (statement -> function_declaration .)
    MODEL           reduce using rule 14 (statement -> function_declaration .)
    FUN             reduce using rule 14 (statement -> function_declaration .)
    RETURN          reduce using rule 14 (statement -> function_declaration .)
    CONTINUE        reduce using rule 14 (statement -> function_declaration .)
    BREAK           reduce using rule 14 (statement -> function_declaration .)
    COMMENT         reduce using rule 14 (statement -> function_declaration .)
    $end            reduce using rule 14 (statement -> function_declaration .)
    RBRACE          reduce using rule 14 (statement -> function_declaration .)


state 15

    (15) statement -> return_statement .

    VAR             reduce using rule 15 (statement -> return_statement .)
    IDENTIFIER      reduce using rule 15 (statement -> return_statement .)
    IF              reduce using rule 15 (statement -> return_statement .)
    WHILE           reduce using rule 15 (statement -> return_statement .)
    FOR             reduce using rule 15 (statement -> return_statement .)
    PRINT           reduce using rule 15 (statement -> return_statement .)
    MODEL           reduce using rule 15 (statement -> return_statement .)
    FUN             reduce using rule 15 (statement -> return_statement .)
    RETURN          reduce using rule 15 (statement -> return_statement .)
    CONTINUE        reduce using rule 15 (statement -> return_statement .)
    BREAK           reduce using rule 15 (statement -> return_statement .)
    COMMENT         reduce using rule 15 (statement -> return_statement .)
    $end            reduce using rule 15 (statement -> return_statement .)
    RBRACE          reduce using rule 15 (statement -> return_statement .)


state 16

    (16) statement -> continue_statement .

    VAR             reduce using rule 16 (statement -> continue_statement .)
    IDENTIFIER      reduce using rule 16 (statement -> continue_statement .)
    IF              reduce using rule 16 (statement -> continue_statement .)
    WHILE           reduce using rule 16 (statement -> continue_statement .)
    FOR             reduce using rule 16 (statement -> continue_statement .)
    PRINT           reduce using rule 16 (statement -> continue_statement .)
    MODEL           reduce using rule 16 (statement -> continue_statement .)
    FUN             reduce using rule 16 (statement -> continue_statement .)
    RETURN          reduce using rule 16 (statement -> continue_statement .)
    CONTINUE        reduce using rule 16 (statement -> continue_statement .)
    BREAK           reduce using rule 16 (statement -> continue_statement .)
    COMMENT         reduce using rule 16 (statement -> continue_statement .)
    $end            reduce using rule 16 (statement -> continue_statement .)
    RBRACE          reduce using rule 16 (statement -> continue_statement .)


state 17

    (17) statement -> break_statement .

    VAR             reduce using rule 17 (statement -> break_statement .)
    IDENTIFIER      reduce using rule 17 (statement -> break_statement .)
    IF              reduce using rule 17 (statement -> break_statement .)
    WHILE           reduce using rule 17 (statement -> break_statement .)
    FOR             reduce using rule 17 (statement -> break_statement .)
    PRINT           reduce using rule 17 (statement -> break_statement .)
    MODEL           reduce using rule 17 (statement -> break_statement .)
    FUN             reduce using rule 17 (statement -> break_statement .)
    RETURN          reduce using rule 17 (statement -> break_statement .)
    CONTINUE        reduce using rule 17 (statement -> break_statement .)
    BREAK           reduce using rule 17 (statement -> break_statement .)
    COMMENT         reduce using rule 17 (statement -> break_statement .)
    $end            reduce using rule 17 (statement -> break_statement .)
    RBRACE          reduce using rule 17 (statement -> break_statement .)


state 18

    (18) statement -> variable_query .
